--- a/_assets/stylesheets/theme.css
+++ b/_assets/stylesheets/theme.css
@@ -75,7 +75,7 @@
 #page-inner-content {
     bottom: 44px;
     position: absolute;
-    top: 118px;
+    top: 120px;
     width: 100%;
 	overflow: hidden !important;
 }
